<resources>
    <string name="app_name">我到</string>
    <string name="sign">签到</string>
    <string name="history">历史</string>
    <string name="start_sign">开始签到</string>
    <string name="input_school_name">输入学校名</string>
    <string name="select_schoole">选择学校</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="mail">邮箱</string>
    <string name="submit">提交</string>
    <string name="course_name">课程名</string>
    <string name="class_name">班级</string>
    <string name="completed">完成</string>
    <string name="input_class_name">输入班级名称</string>
    <string name="school_name">学校名</string>
    <string name="teacher_name">老师名</string>
    <string name="phone">电话  </string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="student_nubmer">学号</string>
    <string name="class_position">职位</string>
    <string name="sexual">性别</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="set_portrait_tips">为了让老师认识你，只能上传自己的本人头像。</string>
    <string name="take_picture">拍照</string>
    <string name="sign_type">签到类型</string>
    <string name="userName_cant_empty">用户名不能为空</string>
    <string name="password_cant_empty">密码不能为空</string>
    <string name="confirm_password_cant_empty">确认密码不能为空</string>
    <string name="name_cant_empty">姓名不能为空</string>
    <string name="student_number_cant_empty">学号不能为空</string>
    <string name="class_cant_empty">班级不能为空</string>
    <string name="position_cant_empty">职位不能为空,若非干部填写“无”</string>
    <string name="mail_cant_empty">邮箱不能为空</string>
    <string name="phone_cant_empty">手机号不能为空</string>
    <string name="submit_info_succeed">提交信息成功</string>
    <string name="not_find_the_host_in_nearby">附近没有发现签到信号</string>
    <string name="i_am">我是</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="bkuv">北京大学</string>
    <string name="select_identity">选择身份</string>
    <string name="name_cant_emty">姓名不能为空</string>
    <string name="register_succeed">注册成功</string>
    <string name="save">保存</string>
    <string name="classes">班级</string>
    <string name="i_am_teacher">我是老师</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="if_denied_you_will_cant_use_wifi_sign_feature">如果拒绝你将不能使用wifi签到功能</string>
    <string name="pleast_opne_location">请先打开定位功能</string>
    <string name="stop_sign">结束签到</string>
    <string name="check_sign_result">检查签到结果</string>
    <string name="add_course">添加课程</string>
    <string name="select_class">选择班级</string>
    <string name="uploading_portrait">正在上传头像</string>
    <string name="absence">缺勤</string>
    <string name="sick_leave">病假</string>
    <string name="sign_info_count">签到信息汇总</string>
    <string name="upload_success">上传成功</string>
    <string name="sure_password">确认密码</string>
    <string name="input_password_again">请再次输入密码</string>

    <string name="student_info">学生信息</string>
    <string name="edit_student_info">编辑学生信息</string>
    <string name="must_choose_class">必须选择班级</string>
    <string name="setting">设置</string>
    <string name="course_cant_empty">课程不能为空</string>
    <string name="class_didnt_exist">班级不存在是否添加</string>
    <string name="add_class">添加班级</string>
    <string name="course_add_success">课程添加成功</string>
    <string name="check_course_sing_info">签到详情</string>
    <string name="check_sign_detail_info">查看签到详情</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="student_login">学生登录</string>
    <string name="teacher_login">老师登录</string>
    <string name="input_mail">输入邮箱</string>
    <string name="input_name">输入姓名</string>
    <string name="course_detail_info">课程信息</string>
    <string name="change_student_sign_state">修改学生签到状态</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="change_password">修改密码</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="log_out">退出登录</string>
    <string name="check_person_info">查看个人信息</string>
    <string name="share_app">分享应用</string>
    <string name="check_version">检查版本</string>
    <string name="unbind_device">解绑设备</string>
    <string name="please_set_portrait">请设置头像</string>
    <string name="feedback_hint">告诉我你在使用中不爽的地方，让我们把它变的更好!</string>
    <string name="tip_input_email_ad">请输入邮箱</string>
    <string name="password_not_same">两次密码不一致，请检查</string>
    <string name="password_change_succeed">密码修改成功</string>
    <string name="password_setting_succeed">密码设置成功</string>
    <string name="thanks_your_feedback">谢谢你的反馈</string>
    <string name="feed_back_content_cant_empty">反馈内容不能为空</string>
    <string name="this_is_nice_app_you_can_download">这个应用还不错，可以下载看看</string>
    <string name="submit_teacher_info">提交老师信息</string>
    <string name="teacher_info">老师信息</string>
    <string name="do_you_want_send_sign_info_mail">你想发送考勤邮件到你的邮箱吗</string>
    <string name="mail_attachment">邮箱附件</string>
    <string name="are_you_sure_send_email">确认发送邮件吗</string>
</resources>
