<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_marginTop="24dp"
        android:theme="@style/ActionMenuWhiteTitle">

    </android.support.v7.widget.Toolbar>

    <TextView

        android:id="@+id/tv_change_pwd_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_change_pwd"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="43dp"
        android:padding="9dp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_change_pwd_sure_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_change_pwd_password"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="9dp"
        android:text="@string/sure_password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_change_pwd_sure_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_change_pwd_password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/tv_change_pwd_sure_password"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_change_pwd_input_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_change_pwd_sure_pwd"
        android:layout_alignTop="@+id/tv_change_pwd_password"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/tv_change_pwd_password"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textSize="18sp" />

</android.support.percent.PercentRelativeLayout>