<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingTop="24dp"
        android:theme="@style/ActionMenuWhiteTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/smssdk_white"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <include layout="@layout/login_numdemo"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9"/>

    <include layout="@layout/login_pwddemo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9"/>


    <ImageView
        android:id="@+id/iv_login_type"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_student"/>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_selector"
        android:text="@string/student_login"
        android:textColor="#ffffff"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/btn_login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:text="@string/forget_password"
        android:textColor="@color/forgetpwd"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@null"
        android:text="@string/register"
        android:textColor="@color/forgetpwd"
        android:textSize="14sp"/>


</LinearLayout>